--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"sourcequery": "0.0.2",
 		"spectre.css": "^0.5.1",
 		"steam-login": "^0.1.7",
-		"ws": "^5.1.1"
+		"ws": "^5.1.1",
+		"hoek": "5.0.3"
 	}
 }
